src/objects/MMD_Con_Outside_DB__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultants - Outside Databases Used for Research</description>
    <fields>
        <fullName>DBNAME__c</fullName>
        <label>Outside Database</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Outside Databases</relationshipLabel>
        <relationshipName>MMD_Con_Outside_DBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Sequence #</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEXT__c</fullName>
        <label>Database Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VCITYST__c</fullName>
        <label>Vendor/Provider City &amp; State</label>
        <length>53</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VNAME__c</fullName>
        <label>Vendor/Provider Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>MMD Con Outside DB</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Outside DBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>